src/styles/master.scss
$mobileScreenSize: 722px;

body {
    font-family: verdana, arial;
    margin: 0px;
}

main {
    margin-left: 10px;

    h1 {
        margin-left: 10px;
    }

    @media (max-width: $mobileScreenSize) {
        margin-left: 0px;
    }
}

h1 {
    font-size: 6vw;
    margin: 2vh;
    text-align: center;
}

h2 {
    margin-top: 20px;
    margin-bottom: 20px;
}

h3 {
    margin-top: 15px;
    margin-bottom: 15px;
}

h4 {
    margin-top: 10px;
    margin-bottom: 10px;
}

a {
    text-decoration: none;
    color: black;
}

button, input[type=submit] {
    padding: 10px 15px;
    font-size: 18px;
    border-radius: 0;
    border: 1px solid transparent;
    background-color: aquamarine;
}

table {
    border-collapse: collapse;

    td, th {
        border: 1px solid black;
        padding: 2px;
    }
}

// Utility Classes
.error, .success {
    padding: 10px;
    margin: 10px;
    border-radius: 10px;
    width: fit-content;
    display: inline-block;
}

.error {
    background-color: lightcoral;
}

.success {
    background-color: lightgreen;
}

.red {
    background-color: red;
}

.green {
    background-color: lightgreen;
}

.hidden {
    display: none;
}

// Navbar
.nav {
    background-color: lightgray;
    justify-content: space-between;
    align-items: center;
    display: flex;

    h3 {
        margin: 0px;
        font-size: 32px;
        padding: .5rem;
    }

    .left {
        float: left;

        h3 {
            margin-left: 5px;
        }
    }

    .right {
        float: right;

        h3 {
            margin-right: 5px;
        }
    }

    ul {
        list-style: none;
    }
}

.desktop {

    .right {

        ul {
            height: 100%;

            li {
                display: inline;
                box-sizing: border-box;

                a {
                    padding: 1rem;
                }

                a:hover {
                    background-color: gray;
                }
            }
        }
    }
}

.mobile {
    ul {
        list-style: none;
        margin: 0;
        padding: 0;
        background-color: lightgray;
        text-align: center;

        li {
            box-sizing: border-box;

            a {
                padding: 15px;
                display: inline-block;
                width: calc(100% - 30px);
            }
        }

        li:has(a:hover) {
            background-color: gray;
        }
    }
}

@media (max-width: $mobileScreenSize) {
    .desktop {
        display: none;
    }
}

@media (min-width: calc($mobileScreenSize + 1px)) {
    .mobile {
        display: none;
    }
}

